[project]
name = "thought-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchdiffeq>=0.2.5",
]
